--- a/ui/css/main.sass
+++ b/ui/css/main.sass
@@ -91,7 +91,7 @@ a.text-danger:hover, a.text-danger:active
 
 .btn-primary.btn-outline:hover, .btn-primary.btn-outline:active, .btn-primary.btn-outline:focus,
 .btn-primary.active.btn-outline, .btn-primary.active.btn-outline:hover, .btn-primary.active.btn-outline:active, .btn-primary.active.btn-outline:focus,
-.open>.dropdown-toggle.btn-primary:focus, .open>.dropdown-toggle.btn-primary:hover
+.open > .dropdown-toggle.btn-primary:focus, .open > .dropdown-toggle.btn-primary:hover
   color: $mapscreenPrimaryColor
   background-color: rgba(28, 144, 243, 0.1)
   border-color: $mapscreenPrimaryColor
@@ -276,12 +276,12 @@ div.detail-panel
     &.fa-plus:hover
       color: #24E605
 
-  //  td.delete
-  //  color: #7B7B7B
-  //  span
-  //    font-size: 1.1em
-  //td.delete span:hover
-  //  color: red
+//  td.delete
+//  color: #7B7B7B
+//  span
+//    font-size: 1.1em
+//td.delete span:hover
+//  color: red
 
 .config-tabs a
   color: rgb(119, 119, 119)
@@ -471,8 +471,8 @@ table.bi-sales-division-table.table
     overflow: hidden
     background-color: #f5f5f5
     border-radius: 4px
-    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1)
-    box-shadow: inset 0 1px 2px rgba(0,0,0,.1)
+    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1)
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1)
     text-align: center
 
 .add-search
@@ -714,7 +714,6 @@ input.view-radio
 .bi-component.optimisation
   padding-top: 10px
 
-
 .bi-component.optimisation-fullscreen
   margin: 35px 0 0px -15px
   position: fixed
@@ -724,26 +723,27 @@ input.view-radio
 
 .progress-bar-info
   background-color: #1C90F3
+
 .progress-bar-not-running
   height: 20px
   margin-bottom: 20px
   overflow: hidden
   background-color: #f5f5f5
   border-radius: 4px
-  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1)
-  box-shadow: inset 0 1px 2px rgba(0,0,0,.1)
+  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1)
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1)
   text-align: center
 
 .optimisation-inner
   //padding: 0px 10px 0px 10px
   margin: 10px
   border-bottom: 1px solid rgb(238, 238, 238)
-  //border-bottom: 2px solid rgb(255, 10, 10)
+//border-bottom: 2px solid rgb(255, 10, 10)
 
 .simulation-inner
   //padding: 0px 10px 0px 10px
   margin: 10px
-  //border-bottom: 1px solid rgb(238, 238, 238)
+//border-bottom: 1px solid rgb(238, 238, 238)
 //border-bottom: 2px solid rgb(255, 10, 10)
 
 .param-adj
@@ -774,3 +774,11 @@ input.view-radio
   width: 93%
   bottom: 22px
   top: 178px
+
+.fixed-right
+  text-align: right
+  font-family: monospace
+
+.row-panel
+  margin-left: 10px
+  margin-right: 10px
