Simplify panel, add popups to show complete sums.

--- a/ui/css/main.sass
+++ b/ui/css/main.sass
@@ -780,5 +780,8 @@ input.view-radio
   font-family: monospace
 
 .row-panel
-  margin-left: 10px
-  margin-right: 10px
+  margin-left: 5px
+  margin-right: 5px
+
+.red
+  color: red
